<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>kershaw.rudi</groupId>
	<artifactId>codenerd</artifactId>
	<version>1.0.0</version>
	<packaging>jar</packaging>

	<name>codenerd</name>
	<description>Rudi Kershaw's 'Code Nerd' blog</description>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.2.7.RELEASE</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>11</java.version>
		<git.hooks.version>1.0.4</git.hooks.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-tomcat</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-undertow</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-cache</artifactId>
		</dependency>
        <dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<scope>runtime</scope>
		</dependency>
        <dependency>
            <groupId>org.twitter4j</groupId>
            <artifactId>twitter4j-core</artifactId>
            <version>[4.0,)</version>
        </dependency>
		<dependency>
			<groupId>jakarta.xml.bind</groupId>
			<artifactId>jakarta.xml.bind-api</artifactId>
			<version>2.3.2</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<!-- Minify plugin usage -> http://samaxes.github.io/minify-maven-plugin/usage.html -->
			<plugin>
				<groupId>com.samaxes.maven</groupId>
				<artifactId>minify-maven-plugin</artifactId>
				<version>1.7.6</version>
				<executions>
					<execution>
						<id>default-minify</id>
						<configuration>
							<charset>UTF-8</charset>
							<webappSourceDir>${basedir}/src/main/resources</webappSourceDir>
							<cssSourceDir>static/styles</cssSourceDir>
							<webappTargetDir>${project.build.outputDirectory}</webappTargetDir>
							<cssSourceIncludes>
								<cssSourceInclude>**</cssSourceInclude>
							</cssSourceIncludes>
							<cssSourceExcludes>
								<cssSourceExclude>**/*.min.css</cssSourceExclude>
							</cssSourceExcludes>
							<jsSourceDir>static/scripts</jsSourceDir>
							<jsSourceIncludes>
								<jsSourceInclude>**</jsSourceInclude>
							</jsSourceIncludes>
							<jsSourceExcludes>
								<jsSourceExclude>**/*.min.js</jsSourceExclude>
							</jsSourceExcludes>
							<skipMerge>true</skipMerge>
						</configuration>
						<goals>
							<goal>minify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.1.1</version>
				<configuration>
					<configLocation>etc/checkstyle/checkstyle.xml</configLocation>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>com.puppycrawl.tools</groupId>
						<artifactId>checkstyle</artifactId>
						<version>8.29</version>
					</dependency>
				</dependencies>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs-maven-plugin</artifactId>
				<version>4.0.0</version>
				<configuration>
					<excludeFilterFile>/etc/spotbugs/exclude-filter.xml</excludeFilterFile>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-pmd-plugin</artifactId>
				<configuration>
					<includeTests>true</includeTests>
					<minimumTokens>100</minimumTokens>
					<targetJdk>${java.version}</targetJdk>
					<failOnViolation>true</failOnViolation>
					<verbose>true</verbose>
				</configuration>
				<executions>
					<execution>
						<phase>test</phase>
						<goals>
							<goal>pmd</goal>
							<goal>cpd</goal>
							<goal>cpd-check</goal>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>1.8</version>
				<executions>
					<execution>
						<id>download-hooks</id>
						<phase>initialize</phase>
						<goals>
							<goal>run</goal>
						</goals>
						<configuration>
							<failOnError>false</failOnError>
							<target>
								<taskdef resource="net/sf/antcontrib/antcontrib.properties" />
								<if>
									<available file="${basedir}/etc/git-hooks/v${git.hooks.version}" />
									<else>
										<delete dir="${basedir}/etc/git-hooks/"/>
										<get src="https://github.com/rudikershaw/client-git-hooks/releases/download/${git.hooks.version}/git-hooks.zip" dest="${project.build.directory}/git-hooks.zip"/>
										<unzip src="${project.build.directory}/git-hooks.zip" dest="${basedir}/etc"/>
										<chmod dir="${basedir}/etc/git-hooks/" includes="**/**" perm="700"/>
										<touch file="${basedir}/etc/git-hooks/v${git.hooks.version}" />
									</else>
								</if>
							</target>
						</configuration>
					</execution>
				</executions>
				<dependencies>
					<dependency>
						<groupId>ant-contrib</groupId>
						<artifactId>ant-contrib</artifactId>
						<version>20020829</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>com.rudikershaw.gitbuildhook</groupId>
				<artifactId>git-build-hook-maven-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<gitConfig>
						<core.hooksPath>etc/git-hooks/</core.hooksPath>
						<hooks.commitmsgregex>(\w+\s){3,}(\w+\.)</hooks.commitmsgregex>
					</gitConfig>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>initialize</goal>
							<goal>configure</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>

